# GameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Editor/: CommandHistory.cpp  CommandHistory.h  EditorApplication.cpp  EditorApplication.h  EditorContext.h  EntityOps.cpp  EntityOps.h  EntityPalette.cpp  EntityPalette.h  GameViewport.cpp  GameViewport.h  LevelIO.cpp  LevelIO.h  MenuBarRenderer.cpp  MenuBarRenderer.h  OverlayRenderer.cpp  OverlayRenderer.h  PlaySessionController.cpp  PlaySessionController.h  PopupRenderer.cpp  PopupRenderer.h  PropertiesPanel.cpp  PropertiesPanel.h  ScenePanel.cpp  ScenePanel.h  SelectionController.cpp  SelectionController.h  ToolbarRenderer.cpp  ToolbarRenderer.h
Engine/Audio/: AudioManager.cpp  AudioManager.h
Engine/Collision/: CollisionSystem.cpp  CollisionSystem.h
Engine/Core/: Application.cpp  Application.h  GameLoop.cpp  GameLoop.h  Time.h
Engine/Entity/: Entity.cpp  Entity.h  EntityFactory.h  EntityManager.cpp  EntityManager.h  EntityTypeRegistry.h
Engine/Gameplay/: GameplaySystem.cpp  GameplaySystem.h
Engine/Input/: InputManager.cpp  InputManager.h
Engine/Level/: LevelGroup.cpp  LevelGroup.h  LevelLoader.cpp  LevelLoader.h
Engine/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
Engine/Rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h
Engine/State/: StateManager.cpp  StateManager.h
Engine/Tile/: TileLayer.cpp  TileLayer.h
Game/: Collectible.h  Enemy.h  FlyingEnemy.h  Goal.h  Hazard.h  MovingPlatform.h  Player.h  Projectile.h  ShootingEnemy.h
Runtime/: CMakeLists.txt  RuntimeApplication.cpp  RuntimeApplication.h  main.cpp
assets/levels/: challenge_run.json  collectible_run.json  demo_level.json  enemy_gauntlet.json  tour_1_intro.json  tour_2_patrol.json  tour_3_shooters.json  tour_4_finale.json  vertical_climb.json  viva_demo.json
assets/levels/groups/: guided_tour.json
tests/: CMakeLists.txt  test_camera.cpp  test_collision.cpp  test_command_history.cpp  test_enemy_behavior.cpp  test_entity_manager.cpp  test_gameplay.cpp  test_level_group.cpp  test_level_io.cpp  test_moving_platform.cpp  test_physics.cpp  test_prefab.cpp  test_tilemap.cpp
